<resources>
    <!--App Name...-->
    <string name="app_name">munshiG_prototye</string>
    <!--Logout dialog message inside Customer account setting page..-->
    <string name="logout_dialog_para">You will have to enter your register mobile number when you relaunch the app.</string>
    <!--User profile name...-->
    <string name="profileName">Manilal</string>
    <!--User shop name...-->
    <string name="shopName">manila@kirana</string>
    <!--MainPage Bottom nav bar purchase card label...-->
    <string name="purchaseLabel">Purchase</string>
    <!--MainPage Bottom nav bar inventory card label...-->
    <string name="inventoryLabel">Inventory</string>
    <!--MainPage Bottom nav bar sales card label...-->
    <string name="salesLabel">Sales Dairy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
